--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-env": "^1.6.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "webpack": "^3.5.6",
+    "html-webpack-plugin": "^3.2.0",
     "webpack-dev-server": "^2.7.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "~2.10.0"
